@@ -1,4 +1,5 @@
 2008-11-13 ivan
+* Extend preferences to save max user inactivity duration before user is logged out
 * Move portal_sessions from erp5_commerce
 
 2008/11/13 yusei
